--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,8 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+}
+
+// navbar
+nav {
+  padding: 0.5rem 0.3rem;
+  background-color: #050505;
+  box-shadow: 0px 10px 16px 1px rgba(0,0,0,0.75);
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    // justify-content: flex-end;
+    // align-items: flex-end;
+    list-style: none;
+
+    li {
+      margin: 0rem 0.5rem;
+    }
+
+    a {
+      text-decoration: none;
+      font-family: 'Staatliches', cursive;
+      color: #fff;
+      font-size: 1.2em;
+      
+        text-shadow:
+        2px 2px 0 #000,
+        -1px -1px 0 #000,  
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+
+      &:hover {
+        color: rgb(181, 95, 207);
+      }
+    }
+
+    .active {
+      color: #58BDDA;
+    }
+  }
+
+  .nav-li-div {
+    display: flex;
+
+  }
 }
 
 // components
@@ -12,6 +63,40 @@ body {
 
 // home components
 .home-component {
+    .slogan {
+        padding: 0.3rem;
+        background-color: #300e0e;
+        // background-image: url(../img/guitar-strings.png);
+        // background-repeat: no-repeat;
+        // background-position: center;
+        
+        h1 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.8em;
+            letter-spacing: 0.3em;
+            color: rgb(214, 209, 209);
+            text-shadow:
+                2px 2px 0 #000,
+                -1px -1px 0 #000,  
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
+            }
+
+        h2 {
+            font-family: 'Staatliches', cursive;
+            font-size: 1.5em;
+            letter-spacing: 0.1em;
+            color: rgb(207, 204, 204);
+            text-shadow:
+                2px 2px 0 #000,
+                -1px -1px 0 #000,  
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
+            }
+    }
+
     // particles text
     .particles-map {
         width: 100vw;
@@ -19,7 +104,9 @@ body {
         background-image: url(../img/world-1920x1200.jpg);
         background-repeat: no-repeat;
         background-position: center;
+        box-shadow: 0px -7px 14px 1px rgba(3, 11, 32, 0.75);
     }
+
     // audioRoom-control 
     .audioRoom-control {
         height: 30vh;
