--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
-
-
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -12,48 +10,58 @@ body {
 
 // navbar
 nav {
-  padding: 0.5rem 0.3rem;
-  background-color: #050505;
-  box-shadow: 0px 10px 16px 1px rgba(0,0,0,0.75);
-
-  ul {
-    display: flex;
-    flex-direction: row;
-    // justify-content: flex-end;
-    // align-items: flex-end;
-    list-style: none;
-
-    li {
-      margin: 0rem 0.5rem;
+    padding: 0.5rem 0.3rem;
+    background-color: #050505;
+    box-shadow: 0px 10px 16px 1px rgba(0, 0, 0, 0.75);
+    ul {
+        display: flex;
+        flex-direction: row;
+        // justify-content: flex-end;
+        // align-items: flex-end;
+        list-style: none;
+        li {
+            margin: 0rem 0.5rem;
+        }
+        a {
+            text-decoration: none;
+            font-family: 'Staatliches', cursive;
+            letter-spacing: 0.08em;
+            color: #fff;
+            font-size: 1.2em;
+            text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+            &:hover {
+                color: rgb(122, 90, 141);
+            }
+        }
+        .active {
+            color: rgb(70, 149, 172);
+        }
     }
-
-    a {
-      text-decoration: none;
-      font-family: 'Staatliches', cursive;
-      color: #fff;
-      font-size: 1.2em;
-      
-        text-shadow:
-        2px 2px 0 #000,
-        -1px -1px 0 #000,  
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
-
-      &:hover {
-        color: rgb(181, 95, 207);
-      }
+    .nav-li-div {
+        display: flex;
     }
+}
 
-    .active {
-      color: #58BDDA;
-    }
-  }
+a.middle {
+    position: relative;
+}
 
-  .nav-li-div {
-    display: flex;
+a.middle:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: rgb(122, 90, 141);
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.6s ease-in-out;
+}
 
-  }
+a.middle:hover:before {
+    visibility: visible;
+    transform: scaleX(1);
 }
 
 // components
@@ -65,38 +73,26 @@ nav {
 .home-component {
     .slogan {
         padding: 0.3rem;
-        background-color: #300e0e;
+        background-color: rgb(38, 37, 59);
         // background-image: url(../img/guitar-strings.png);
         // background-repeat: no-repeat;
         // background-position: center;
-        
+        box-shadow: inset 1px 200px 35px -195px rgba(2, 9, 27, 0.75);
         h1 {
             font-family: 'Orbitron', sans-serif;
-            font-size: 1.8em;
+            font-size: 1.7em;
             letter-spacing: 0.3em;
-            color: rgb(214, 209, 209);
-            text-shadow:
-                2px 2px 0 #000,
-                -1px -1px 0 #000,  
-                1px -1px 0 #000,
-                -1px 1px 0 #000,
-                1px 1px 0 #000;
-            }
-
+            color: rgb(90, 90, 90);
+            text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        }
         h2 {
             font-family: 'Staatliches', cursive;
             font-size: 1.5em;
             letter-spacing: 0.1em;
             color: rgb(207, 204, 204);
-            text-shadow:
-                2px 2px 0 #000,
-                -1px -1px 0 #000,  
-                1px -1px 0 #000,
-                -1px 1px 0 #000,
-                1px 1px 0 #000;
-            }
+            text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        }
     }
-
     // particles text
     .particles-map {
         width: 100vw;
@@ -106,7 +102,6 @@ nav {
         background-position: center;
         box-shadow: 0px -7px 14px 1px rgba(3, 11, 32, 0.75);
     }
-
     // audioRoom-control 
     .audioRoom-control {
         height: 30vh;
