--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -40,33 +41,43 @@ nav {
     .nav-li-div {
         display: flex;
     }
+
+    // link hover effect
+    a.middle {
+        position: relative;
+    }
+    a.middle:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: rgb(122, 90, 141);
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.6s ease-in-out;
+    }
+    a.middle:hover:before {
+        visibility: visible;
+        transform: scaleX(1);
+    }
 }
 
-a.middle {
-    position: relative;
-}
-
-a.middle:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: rgb(122, 90, 141);
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.6s ease-in-out;
-}
-
-a.middle:hover:before {
-    visibility: visible;
-    transform: scaleX(1);
-}
 
 // components
-.App {
-    text-align: center;
+// .App {
+//     text-align: center;
+// }
+
+// app container
+.app-container {
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(241, 236, 236, 0.5);
 }
 
 // home components
@@ -78,10 +89,12 @@ a.middle:hover:before {
         // background-repeat: no-repeat;
         // background-position: center;
         box-shadow: inset 1px 200px 35px -195px rgba(2, 9, 27, 0.75);
+        
         h1 {
             font-family: 'Orbitron', sans-serif;
             font-size: 1.7em;
             letter-spacing: 0.3em;
+            text-align: center;
             color: rgb(90, 90, 90);
             text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
         }
@@ -89,10 +102,12 @@ a.middle:hover:before {
             font-family: 'Staatliches', cursive;
             font-size: 1.5em;
             letter-spacing: 0.1em;
+            text-align: center;
             color: rgb(207, 204, 204);
             text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
         }
     }
+
     // particles text
     .particles-map {
         width: 100vw;
@@ -102,6 +117,7 @@ a.middle:hover:before {
         background-position: center;
         box-shadow: 0px -7px 14px 1px rgba(3, 11, 32, 0.75);
     }
+
     // audioRoom-control 
     .audioRoom-control {
         height: 30vh;
@@ -124,6 +140,63 @@ a.middle:hover:before {
         background: orange;
     }
 }
+
+.title-container {
+    text-align: center;
+}
+
+// form style for login and register
+.form-container {
+    width: 30rem;
+    padding: 1rem 0rem;
+    background-color: rgba(233, 233, 235, 0.5);
+    box-shadow: 0px 2px 12px 0px rgba(1,9,26,1);
+
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 1rem;
+        background-color: rgba(22, 22, 22, 0.7);
+        // border-top: 1px solid color(primary);
+
+        input {
+            margin: 0.5rem;
+        }
+
+        span {
+          text-align: right;
+          color: rgb(221, 217, 217);
+        }
+    }
+
+    h2 {
+      text-align: center;
+    }
+}
+
+// musician container
+.musician-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .musician-profile {
+        width: 90vw;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .musician {
+        width: 20rem;
+        margin: 0.5rem;
+        padding: 1rem;
+        box-shadow: 0px 2px 10px 0px rgba(1,9,26,1);
+    }
+}
+
+
 
 // logo
 .App-logo {
