--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -191,11 +191,36 @@ nav {
     .musician {
         width: 20rem;
         margin: 0.5rem;
-        padding: 1rem;
-        box-shadow: 0px 2px 10px 0px rgba(1,9,26,1);
+        padding: 1rem 1rem 1.5rem 1rem;
+        box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
+
+        h3 {
+            font-size: 1.35em;
+        }
+
+        a {
+            color: rgb(70, 149, 172);
+            font-weight: bold;
+
+            &:hover{
+                color: #000;
+            }
+        }
     }
 }
 
+// profile
+// .profile {
+//     // align-self: flex-start;
+//     padding: 0.5rem 2.5rem 1.5rem 2.5rem;
+//     position: absolute;
+//     top: 7.5rem;
+//     box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
+
+//     h2 {
+//         margin-bottom: 3rem;
+//     }
+// }
 
 
 // logo
