--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -106,7 +106,7 @@ nav {
     .particles-map {
         width: 100vw;
         height: 100vh;
-        background-image: url(../img/world-1920x1200.jpg);
+        background-image: url(../img/world-map2.jpg);
         background-repeat: no-repeat;
         background-position: center;
         box-shadow: 0px -7px 14px 1px rgba(3, 11, 32, 0.75);
