get project owner

--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -382,3 +382,13 @@ nav {
         // }
     }
 }
+
+// projects
+.project-title {
+    margin: 2rem 0rem;
+
+    h2, h3 {
+        display: inline;
+    }
+
+}
