--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -111,6 +111,24 @@ nav {
         background-position: center;
         box-shadow: 1px -1px 11px -1px rgba(0, 0, 0, 0.75);
         box-shadow: 0px 10px 15px -5px rgba(15, 15, 15, 0.75);
+        // search container
+        .search-container {
+            position: absolute;
+            top: 15rem;
+            right: 2rem;
+            form {
+                input {
+                    color: black;
+                    padding: 0.3rem 0.5rem;
+                    border-radius: 7px;
+                    background-color: rgba(188, 179, 201, 0.8);
+                    border: black solid 1px;
+                    &::placeholder {
+                        color: black;
+                    }
+                }
+            }
+        }
     }
     .gif-logo-div {
         display: flex;
@@ -299,7 +317,6 @@ nav {
         align-items: center;
         padding: 1rem;
         background-color: rgba(22, 22, 22, 0.7);
-
         input {
             margin: 0.5rem;
         }
@@ -307,15 +324,12 @@ nav {
             text-align: right;
             color: rgb(221, 217, 217);
         }
-
-        .inp-div{
-            
-            input[type='radio']{
+        .inp-div {
+            input[type='radio'] {
                 text-align: right;
             }
         }
-
-        .inp-label{
+        .inp-label {
             text-align: left;
             // margin-right: 1rem;
         }
@@ -325,60 +339,63 @@ nav {
     }
 }
 
-
 // register form
 .register-form {
     .radio-btns {
         display: flex;
     }
-    .inp-radio-btn{
-        h4{
+    .inp-radio-btn {
+        h4 {
             text-align: center;
             color: rgb(221, 218, 218);
         }
     }
-    .inp-radio-btn:first-child{
+    .inp-radio-btn:first-child {
         margin-right: 5rem;
     }
-
     label {
         color: #fff;
     }
-
-    .country-selection-div{
-        h4{
-           color: rgb(221, 218, 218);
-           text-align: center;
+    .country-selection-div {
+        h4 {
+            color: rgb(221, 218, 218);
+            text-align: center;
         }
-        .country-selection{
+        .country-selection {
             margin-top: -2.2rem;
-            
-            input{
+            input {
                 color: #000;
             }
-            .flag-select__option__label{
+            .flag-select__option__label {
                 color: #000;
             }
-            .flag-select__btn{
-            color: #000 !important;
-            background-color: rgb(241, 238, 238);
-        }
+            .flag-select__btn {
+                color: #000 !important;
+                background-color: rgb(241, 238, 238);
+            }
         }
     }
     button {
         margin-top: 2rem;
     }
-
 }
 
 // musician container
 .musician-container {
-    width: 90vw;
+    width: 100vw;
+    //height: 75vh;
+    margin-top: 2rem;
+    padding: 2rem 2rem 3rem 6rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url(../img/collage.jpg);
+    h2 {
+        color: #fff;
+    }
     .musician-profile {
+        width: 90vw;
         display: flex;
         flex-wrap: wrap;
     }
@@ -386,9 +403,21 @@ nav {
         width: 20rem;
         margin: 0.5rem;
         padding: 1rem 1rem 1.5rem 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
         box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
+        border-radius: 8px;
+        background-color: rgba(231, 222, 235, 0.9);
+        box-shadow: inset 4px -2px 41px -5px rgba(0, 0, 0, 0.75);
         h3 {
             font-size: 1.35em;
+        }
+        img {
+            width: 130px;
+            box-shadow: 0px 2px 8px 0px rgba(1, 9, 26, 1);
         }
         a {
             color: rgb(70, 149, 172);
@@ -397,37 +426,78 @@ nav {
                 color: #000;
             }
         }
+        .mailto {
+            color: #000;
+            text-decoration: none;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 0.2rem 0.5rem;
+            &:hover {
+                color: #7a5a8d;
+            }
+        }
     }
 }
 
 // account
-.musician-container-account {
+.musician-container-account-outer {
+    width: 100vw;
+    padding: 3rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(67, 63, 80);
+    h2 {
+        color: #fff;
+    }
     .musician-account-container {
+        padding: 1rem;
+        width: 60vw;
         display: flex;
         flex-direction: row;
-    }
-    .account {
-        width: 55vw;
+        background-color: rgb(231, 229, 229);
+        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        border-radius: 10px;
         h2 {
-            font-size: 1.7rem;
-        }
-    }
-    .account-manager {
-        width: 15vw;
-        padding-left: 1.5rem;
-        border-left: 1px solid rgb(182, 179, 179);
-        a {
-            font-size: 1.2em;
-            font-weight: 500;
             color: #000;
-            line-height: 1.3em;
-            &:hover {
-                color: rgb(70, 149, 172);
+        }
+        .musician-account-container {
+            display: flex;
+            flex-direction: row;
+        }
+        .account {
+            width: 30vw;
+            padding-left: 2rem;
+            margin-top: 1rem;
+            h2 {
+                font-size: 1.7rem;
+            }
+            h3 {
+                font-size: 1.5em;
+                margin-top: 0.4rem;
+            }
+            img {
+                box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
             }
         }
-    }
-    .profile-img-container {
-        margin-top: 2rem;
+        .account-manager {
+            width: 20vw;
+            padding-left: 1.5rem;
+            border-left: 1px solid rgb(182, 179, 179);
+            a {
+                font-size: 1.2em;
+                font-weight: 500;
+                color: #000;
+                line-height: 1.3em;
+                &:hover {
+                    color: rgb(70, 149, 172);
+                }
+            }
+        }
+        .profile-img-container {
+            margin-top: 2rem;
+        }
     }
 }
 
@@ -467,7 +537,7 @@ nav {
 }
 
 // country-flag
-.country-flag{
+.country-flag {
     width: 3.5rem;
     height: 3.5rem;
 }
@@ -478,7 +548,38 @@ nav {
     p {
         font-weight: 900;
     }
-    h2, h3, p{
+    h2,
+    h3,
+    p {
         display: inline;
+    }
+}
+
+//this will go in the project css
+.projects-container {
+    h2 {
+        color: white;
+        margin-top: 2rem;
+    }
+    width: 100vw;
+    height: 90vh;
+    margin-top: 2rem;
+    background-image: url(../img/collage.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .projects-container-inner {
+        width: 50vw;
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
+        border-radius: 8px;
+        background-color: #e7deeb;
+        box-shadow: inset 4px -2px 41px -5px rgba(0, 0, 0, 0.75);
     }
 }
