--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -1,19 +1,18 @@
 // single project
-.single-project-container{
+.single-project-container {
     padding: 1rem;
-    .btn-group{
+    .btn-group {
         // box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
         border-radius: 5px;
         // border: 1px solid #ccc;
         margin: 0 auto;
         color: #000;
         font-weight: bold;
-
         .play {
             background-color: rgb(109, 111, 233);
             color: #000;
             border: 1px solid #fff;
-            &:hover{
+            &:hover {
                 color: #fff;
             }
         }
@@ -21,7 +20,7 @@
             background-color: rgb(151, 162, 182);
             color: #000;
             border: 1px solid #fff;
-            &:hover{
+            &:hover {
                 color: #fff;
             }
         }
@@ -29,31 +28,28 @@
             background-color: rgb(179, 119, 236);
             color: #000;
             border: 1px solid #fff;
-            &:hover{
+            &:hover {
                 color: #fff;
             }
         }
     }
-
-    a{
+    a {
         color: #000;
-        &:hover{
-             color: rgb(70, 149, 172);
+        &:hover {
+            color: rgb(70, 149, 172);
         }
     }
-
-    .track{
+    .track {
         // border: 1px solid #000;
         padding: 1rem 2rem;
         background-color: rgba(241, 236, 236, 0.5);
         box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
     }
-
-    .btn-delete-project{
-        background-color: rgb(233, 111, 55);
-        border: 1px solid rgb(233, 111, 55);
-        &:hover{
-            background-color: rgba(233, 111, 55,0.8);
+    .btn-delete-project {
+        background-color: rgb(165, 29, 5);
+        border: 1px solid rgb(139, 6, 6);
+        &:hover {
+            background-color: rgba(233, 111, 55, 0.8);
         }
     }
 }
