--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -1,59 +1,82 @@
 // single project
-.single-project-container{
+.single-project-container-outer{
+    width: 100vw;
+    background-image: url(../img/collage.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
     padding: 1rem;
-    .btn-group{
-        // box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
-        border-radius: 5px;
-        // border: 1px solid #ccc;
-        margin: 0 auto;
-        color: #000;
-        font-weight: bold;
+    .single-project-container{
+        padding: 1rem;
 
-        .play {
-            background-color: rgb(109, 111, 233);
+        .project-title{
+            padding: 0.5rem;
+            background-color: rgba(255, 255, 255,0.8);
             color: #000;
-            border: 1px solid #fff;
-            &:hover{
-                color: #fff;
+        }
+        .btn-group{
+            // box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+            border-radius: 5px;
+            // border: 1px solid #ccc;
+            margin: 0 auto;
+            color: #000;
+            font-weight: bold;
+
+            .play {
+                background-color: rgb(109, 111, 233);
+                color: #000;
+                border: 1px solid #fff;
+                &:hover{
+                    color: #fff;
+                }
+            }
+            .pause {
+                background-color: rgb(151, 162, 182);
+                color: #000;
+                border: 1px solid #fff;
+                &:hover{
+                    color: #fff;
+                }
+            }
+            .stop {
+                background-color: rgb(179, 119, 236);
+                color: #000;
+                border: 1px solid #fff;
+                &:hover{
+                    color: #fff;
+                }
             }
         }
-        .pause {
-            background-color: rgb(151, 162, 182);
+
+        a{
             color: #000;
-            border: 1px solid #fff;
-            &:hover{
+            text-decoration: none;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 0.2rem 0.5rem;
+            background-color: rgba(255, 255, 255,0.8);
+            &:hover {
                 color: #fff;
+                background-color: rgba(122, 90, 141,0.7);
             }
         }
-        .stop {
-            background-color: rgb(179, 119, 236);
-            color: #000;
-            border: 1px solid #fff;
+
+
+        .track{
+            // border: 1px solid #000;
+            padding: 1rem 2rem;
+            background-color: rgba(241, 236, 236, 0.5);
+            box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        }
+
+        .btn-delete-project{
+            background-color: rgb(233, 111, 55);
+            border: 1px solid rgb(233, 111, 55);
             &:hover{
-                color: #fff;
+                background-color: rgba(233, 111, 55,0.8);
             }
-        }
-    }
-
-    a{
-        color: #000;
-        &:hover{
-             color: rgb(70, 149, 172);
-        }
-    }
-
-    .track{
-        // border: 1px solid #000;
-        padding: 1rem 2rem;
-        background-color: rgba(241, 236, 236, 0.5);
-        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
-    }
-
-    .btn-delete-project{
-        background-color: rgb(233, 111, 55);
-        border: 1px solid rgb(233, 111, 55);
-        &:hover{
-            background-color: rgba(233, 111, 55,0.8);
         }
     }
 }
