change nav (login & logout on the leftside)

--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -46,6 +46,11 @@ nav {
     .nav-li-div {
         display: flex;
     }
+     .nav-item-left{
+            position: absolute;
+            right: 2.5rem;
+        }
+
     // link hover effect
     a.middle {
         position: relative;
