--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -1,3 +1,94 @@
+// project
+.projects-container {
+    h2 {
+        color: white;
+        margin: -3rem 0rem 3rem 0rem;
+    }
+    width: 100vw;
+    height: 90vh;
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+    background-image: url(../img/collage.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .projects-container-inner {
+        position: relative;
+        width: 50vw;
+        padding: 1rem 0rem 2rem 0rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
+        border-radius: 8px;
+        background-color: #e7deeb;
+        box-shadow: inset 4px -2px 41px -5px rgba(201, 95, 95, 0.75);
+        box-shadow: 1px 2px 10px 3px rgba(113, 153, 175, 0.75);
+
+        form {
+            margin-top: 3rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            button {
+                width: 10rem;
+                margin-top: 1.0rem;
+
+                &:hover{
+                    background-color:rgba(122, 90, 141,0.5);
+                }
+            }
+        }
+    }
+
+    ul {
+        width: 20rem;
+        margin-right: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        text-align: center;
+
+        li {
+            margin-top: 0.5rem;
+            a {
+                font-family: 'Orbitron', sans-serif;
+                font-size: 1.3em;
+                text-decoration: none;
+                color: #000;
+                
+                &:hover{
+                    color:rgb(78, 103, 173);
+                }
+            }
+        }
+        
+        li:nth-child(odd){
+            background-color: rgb(208, 207, 216);
+        }
+    }
+}
+
+.project-title {
+    margin: 0.5rem 0rem 2rem 0rem;
+    p {
+        font-weight: 900;
+    }
+    h2,
+    h3,
+    p {
+        display: inline;
+    }
+}
+
 // single project
 .single-project-container-outer{
     width: 100vw;
@@ -27,7 +118,7 @@
             font-weight: bold;
 
             .play {
-                background-color: rgb(109, 111, 233);
+                background-color: rgb(78, 103, 173);
                 color: #000;
                 border: 1px solid #fff;
                 &:hover{
@@ -43,7 +134,7 @@
                 }
             }
             .stop {
-                background-color: rgb(179, 119, 236);
+                background-color: rgb(127, 107, 146);
                 color: #000;
                 border: 1px solid #fff;
                 &:hover{
@@ -52,19 +143,19 @@
         }
     }
 
-        a{
-            color: #000;
-            text-decoration: none;
-            border: 1px solid #000;
-            border-radius: 5px;
-            padding: 0.2rem 0.5rem;
-            background-color: rgba(255, 255, 255,0.8);
-            border: 1px solid #fff;
-            &:hover {
-                color: #fff;
-                background-color: rgba(122, 90, 141,0.7);
-            }
+    a {
+        color: #000;
+        text-decoration: none;
+        border: 1px solid #000;
+        border-radius: 5px;
+        padding: 0.2rem 0.5rem;
+        background-color: rgba(255, 255, 255,0.8);
+        border: 1px solid #fff;
+        &:hover {
+            color: #fff;
+            background-color: rgba(122, 90, 141,0.7);
         }
+    }
 
     .track {
         // border: 1px solid #000;
@@ -73,11 +164,26 @@
         box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
     }
     .btn-delete-project {
-        background-color: rgb(165, 29, 5);
-        border: 1px solid rgb(139, 6, 6);
+        background-color: rgb(90, 3, 3);
+        border: 1px solid rgb(104, 103, 103);
         &:hover {
-            background-color: rgba(233, 111, 55, 0.8);
+            background-color: rgba(90, 3, 3,0.5);
         }
     }
 }
+}
+
+// monkey images
+.img-deco {
+    width: 150px;
+    position: absolute;
+    // top: 15rem;
+
+}
+.img-deco-one {
+   left: 2.5rem;
+
+}
+.img-deco-two {
+    left: 29.5rem;
 }
