--- a/client/src/style/Playlist.scss
+++ b/client/src/style/Playlist.scss
@@ -11,11 +11,11 @@
 }
 
 .playlist .channel {
-    background: #928db3;
+    background: #7d868a;
 }
 
 .playlist .channel-progress {
-    background: #2f2b4d;
+    background: #2e3c4e;
 }
 
 .playlist .cursor {
@@ -63,7 +63,7 @@
 .playlist .controls header {
     overflow: hidden;
     color: white;
-    background-color: #1d0b45;
+    background-color: #122533;
     margin-bottom: 1em;
     padding: 0.2rem 0rem;
     height: 20px;
