--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -443,27 +443,29 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
         width: 90vw;
         display: flex;
         flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
     .musician {
-        width: 20rem;
-        margin: 0.5rem;
-        padding: 1rem 1rem 1.5rem 1rem;
+        width: 19rem;
+        margin: 1rem;
+        padding: 1rem 0.5rem 1.5rem 0.5rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: rgba(255, 255, 255,0.8);
-        box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
         border-radius: 8px;
-        background-color: rgba(231, 222, 235, 0.9);
+        background-color: rgba(206, 202, 202, 0.8);
         // box-shadow: inset 4px -2px 41px -5px rgba(0, 0, 0, 0.75);
+        // box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
         box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
         h3 {
             font-size: 1.35em;
         }
         img {
             width: 110px;
-            box-shadow: 0px 1px 5px 0px rgb(16, 17, 19);
+            // box-shadow: 0px 1px 15px 0px rgb(18, 28, 48);
             // border-radius: 50%;
             border-radius: 10px;
         }
@@ -474,25 +476,39 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
                 color: #000;
             }
         }
-        .btn-link {
-            color: #000;
-            text-decoration: none;
-            // border: 1px solid rgb(124, 123, 123);
-            border-radius: 5px;
-            padding: 0.2rem 1rem;
-            background-color: rgba(77, 143, 163, 0.5);
-            box-shadow: 0px 1px 5px 0px rgb(7, 7, 7);
-            &:hover {
-                // color: #7a5a8d;
-                color: rgb(48, 134, 160);
-                background-color: rgba(94, 147, 163, 0.3);
-            }
-        }
 
         .view {
             margin-top: 1rem;
         }
     }
+
+    .musician:hover {
+        transform: scale(1.1, 1.1);
+    }
+
+    .musician-profile-container {
+        width: 20rem;
+        padding: 1rem 0.5rem 1.5rem 0.5rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 8px;
+        background-color: rgba(206, 202, 202, 0.8);
+        // box-shadow: inset 4px -2px 41px -5px rgba(0, 0, 0, 0.75);
+        // box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
+        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        h3 {
+            font-size: 1.35em;
+        }
+        img {
+            width: 110px;
+            // box-shadow: 0px 1px 15px 0px rgb(18, 28, 48);
+            // border-radius: 50%;
+            border-radius: 10px;
+        }
+    }
+
 }
 
 // account
@@ -550,8 +566,15 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
                 color: #000;
                 line-height: 1.3em;
                 &:hover {
-                    color: rgb(70, 149, 172);
+                   color:#234a5f;
                 }
+            }
+            a:nth-child(2){
+                padding-bottom: 0.5rem;
+            }
+            
+            i {
+                margin-right: 0.5rem;
             }
         }
         .profile-img-container {
@@ -568,9 +591,13 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
         text-align: center;
     }
     form {
+        width: 30rem;
         margin: 2rem 0rem;
+        padding: 2rem 0.5rem;
         display: flex;
         flex-direction: column;
+        background-color: rgba(230, 225, 225, 0.5);
+        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
         label {
             display: flex;
             flex-direction: row;
@@ -584,14 +611,8 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
             height: 20px;
             flex: 0 0 200px;
             margin-left: 10px;
+            background-color: rgba(252, 252, 252, 0.5);
         }
-        // .edit-data{
-        //    align-self: flex-start;
-        // }
-        // input{
-        //     margin: 0.3rem;
-        //     margin-left: 1rem;
-        // }
     }
 }
 
@@ -599,6 +620,22 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
 .country-flag {
     width: 3.5rem;
     height: 3.5rem;
+}
+
+
+// form general
+form {
+    input{
+        border-radius: 5px;
+        border: 1px solid rgb(48, 48, 48);
+        padding: 0.3rem 0.5rem;
+    }
+}
+
+// 
+.msg-container {
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 // buttons
@@ -611,15 +648,62 @@ background: radial-gradient(circle, rgba(70,149,172,1) 0%, rgba(1,1,13,1) 87%);
     &:hover{
         // background-color:rgba(122, 90, 141,0.5);
         background-color: rgba(70, 149, 172,0.8);
-        // border: 1px solid rgb(78, 103, 173);
     }
 }
 
-form {
-    input{
-        border-radius: 5px;
-        border: 1px solid rgb(48, 48, 48);
-        padding: 0.3rem 0.5rem;
+.btn-edit {
+    align-self: center;
+    width: 10rem;
+}
+
+.btn-delete {
+    // font-family: 'Staatliches', cursive;
+    letter-spacing: 0.05em;
+    font-size: 0.8em;
+    font-weight: bold;
+    background-color: rgb(95, 25, 25);
+    color: rgb(170, 169, 169);
+    padding: 0.2rem 1rem;
+    // border: 1px solid rgb(104, 103, 103);
+    border: 1px solid rgba(36, 36, 36, 0.5);
+    border-radius: 5px;
+    &:hover {
+        background-color: rgba(90, 3, 3,0.5);
     }
 }
 
+.btn-visit {
+    margin-top: 1rem;
+    padding: 0.3rem 1rem;
+    text-decoration: none;
+    color: #000 !important;
+    border: 1px solid #000;
+    border-radius: 5px;
+    &:hover{
+        background-color: rgba(70, 149, 172,0.8);
+    }
+}
+
+//
+.btn-link-mailto {
+    font-family: 'Staatliches', cursive;
+    letter-spacing: 0.05em;
+    color: #000;
+    text-decoration: none;
+    border: 1px solid #000 !important;
+    border-radius: 5px !important;
+    padding: 0.2rem 0.5rem;
+    background-color: rgba(243, 237, 237, 0.7);
+    &:hover {
+        background-color: rgba(70, 149, 172,0.8);
+    }
+}
+
+// 
+.heading{
+    font-size: 2rem;
+    font-family: 'Staatliches', cursive;
+    letter-spacing: 0.1em;
+    color: rgb(241, 240, 240);
+    text-shadow: 0 0 5px black;
+}
