--- a/client/src/style/Project.scss
+++ b/client/src/style/Project.scss
@@ -1,8 +1,12 @@
 // project
 .projects-container {
     h2 {
-        color: white;
         margin: -3rem 0rem 3rem 0rem;
+        font-size: 2rem;
+        font-family: 'Staatliches', cursive;
+        letter-spacing: 0.1em;
+        color: #f1f0f0;
+        text-shadow: 0 0 5px black;
     }
     width: 100vw;
     height: 90vh;
@@ -22,13 +26,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #fff;
         box-shadow: 0px 1px 5px 0px rgb(112, 112, 114);
         border-radius: 8px;
-        background-color: #e7deeb;
-        // box-shadow: inset 4px -2px 41px -5px rgba(201, 95, 95, 0.75);
+        background-color: rgba(167, 169, 172, 0.7);
         box-shadow: inset 4px -2px 45px -5px rgba(10, 10, 10, 0.9);
-        // box-shadow: 1px 2px 10px 3px rgba(76, 160, 206, 0.75);
+        box-shadow: 1px 2px 10px 2px rgba(235, 236, 240, 0.6);
 
         form {
             margin-top: 3rem;
@@ -65,15 +67,36 @@
                 font-size: 1.3em;
                 text-decoration: none;
                 color: #000;
+                padding: 0rem 0.3rem;
                 
                 &:hover{
-                    color:rgb(78, 103, 173);
+                    color:#1a2e5a;
                 }
+            }
+            // link hover effect
+            a.middle {
+                position: relative;
+            }
+            a.middle:before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                bottom: 0;
+                left: 0;
+                background-color: #1a2e5a;
+                visibility: hidden;
+                transform: scaleX(0);
+                transition: all 0.6s ease-in-out;
+            }
+            a.middle:hover:before {
+                visibility: visible;
+                transform: scaleX(1);
             }
         }
         
         li:nth-child(odd){
-            background-color: rgb(208, 207, 216);
+            background-color: rgba(152, 152, 156, 0.7);
         }
     }
 }
@@ -87,6 +110,8 @@
     h3,
     p {
         display: inline;
+        font-family: 'Staatliches', cursive;
+        letter-spacing: 0.1em;
     }
 }
 
@@ -111,38 +136,40 @@
             margin-top: -2.5rem;
             padding: 0.5rem;
             // background-color: rgba(255, 255, 255,0.7);
-            // color: #000;
             color: #fff;
             padding: 1rem;
         }
 
         .btn-group{
-            // box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+            box-shadow: 0px 2px 8px 0px rgba(1, 9, 26, 0.5);
             border-radius: 5px;
             margin: 0 auto;
             color: #000;
-            font-weight: bold;
+            font-weight: 900;
 
             .play {
-                background-color: rgb(78, 103, 173);
+                background-color: rgb(85, 118, 145);
                 color: #000;
                 border: 1px solid #fff;
+                letter-spacing: 0.1em;
                 &:hover{
                     color: #fff;
                 }
             }
             .pause {
-                background-color: rgb(151, 162, 182);
+                background-color: rgb(138, 142, 153);
                 color: #000;
                 border: 1px solid #fff;
+                letter-spacing: 0.1em;
                 &:hover{
                     color: #fff;
                 }
             }
             .stop {
-                background-color: rgb(127, 107, 146);
+                background-color: rgb(100, 106, 131);
                 color: #000;
                 border: 1px solid #fff;
+                letter-spacing: 0.1em;
                 &:hover{
                     color: #fff;
                 }
@@ -172,7 +199,9 @@
         // border: 1px solid #000;
         padding: 1rem 2rem;
         background-color: rgba(238, 237, 237, 0.7);
-        box-shadow: 0px 2px 12px 0px rgba(1, 9, 26, 1);
+        box-shadow: 0px 2px 15px 0px rgba(1, 9, 26, 1);
+        font-family: 'Staatliches', cursive;
+        letter-spacing: 0.08em
     }
     .btn-delete-project {
         align-self: flex-end;
@@ -189,16 +218,22 @@
 }
 
 // monkey images
+@keyframes fadeIn {
+    from{
+        opacity: 0.3;
+    }
+}
 .img-deco {
     width: 150px;
     position: absolute;
     // top: 15rem;
+    animation: fadeIn 1.7s infinite alternate;
 
 }
 .img-deco-one {
-   left: 2.5rem;
+   left: 2.4rem;
 
 }
 .img-deco-two {
-    left: 29.5rem;
+    left: 29.3rem;
 }
